get_pixel function fix, negative index problem ¬¬

--- a/glauRecon.ipynb
+++ b/glauRecon.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -105,35 +105,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_pixel(img, line, col): \n",
     "      \n",
     "    new_value = 0\n",
-    "      \n",
-    "    try: \n",
-    "        # If local neighbourhood pixel  \n",
-    "        # value is greater than or equal \n",
-    "        # to center pixel values then  \n",
-    "        # set it to 1\n",
-    "        new_value = img[line][col]\n",
-    "        print(\"Entrei com o vizinho\"+str(img[line][line]))\n",
-    "              \n",
-    "    except: \n",
-    "        # Exception is required when  \n",
-    "        # neighbourhood value of a center \n",
-    "        # pixel value is null i.e. values \n",
-    "        # present at boundaries. \n",
-    "        pass\n",
+    "    if(line >= 0 and col >= 0):  \n",
+    "        try: \n",
+    "            # If local neighbourhood pixel  \n",
+    "            # value is greater than or equal \n",
+    "            # to center pixel values then  \n",
+    "            # set it to 1\n",
+    "            new_value = img[line][col]\n",
+    "            #print(\"Entrei com o vizinho \"+str(img[line][line]))\n",
+    "                \n",
+    "        except: \n",
+    "            # Exception is required when  \n",
+    "            # neighbourhood value of a center \n",
+    "            # pixel value is null i.e. values \n",
+    "            # present at boundaries. \n",
+    "            pass\n",
     "      \n",
     "    return new_value "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +168,8 @@
     "       \n",
     "    # Now, we need to convert binary  \n",
     "    val = 0\n",
-    "    print(val_ar)\n",
-    "    print(\"############\")\n",
+    "    #print(val_ar)\n",
+    "    #print(\"############\")\n",
     "    for i in range(8): \n",
     "        val += val_ar[i] * np.power(2, 7 -i) \n",
     "          \n",
@@ -178,13 +178,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def LBP(img):\n",
     "    img_lbp = np.zeros((img.shape[0],img.shape[1]), np.uint8)\n",
-    "    print(img_lbp.shape) \n",
+    "    #print(img_lbp.shape) \n",
     "    for line in range(img.shape[0]):\n",
     "        for col in range(img.shape[1]):\n",
     "            img_lbp[line, col] = lbp_calculated_pixel(img, line, col)\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -202,7 +202,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "(360, 480)\n[[1 1 1]\n [1 0 0]\n [0 0 0]]\n(3, 3)\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho1\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho1\n[0, 0, 0, 1, 0, 1, 0, 1]\n############\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho1\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho1\n[0, 0, 0, 1, 0, 0, 1, 1]\n############\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho1\n[0, 0, 0, 0, 0, 0, 0, 1]\n############\nEntrei com o vizinho1\nEntrei com o vizinho1\nEntrei com o vizinho1\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\n[1, 1, 1, 0, 0, 0, 0, 0]\n############\nEntrei com o vizinho1\nEntrei com o vizinho1\nEntrei com o vizinho1\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\n[1, 1, 1, 0, 0, 0, 0, 1]\n############\nEntrei com o vizinho1\nEntrei com o vizinho1\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\n[1, 1, 0, 0, 0, 0, 0, 0]\n############\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\n[0, 1, 0, 0, 0, 0, 0, 0]\n############\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\n[1, 0, 0, 0, 0, 0, 0, 0]\n############\nEntrei com o vizinho0\nEntrei com o vizinho0\nEntrei com o vizinho0\n[0, 0, 0, 0, 0, 0, 0, 0]\n############\n[[ 21  19   1]\n [224 225 192]\n [ 64 128   0]]\n---------------\n"
+     "text": "(360, 480)\n[[1 1 1]\n [1 0 0]\n [0 0 0]]\n[[ 20  19   1]\n [ 96 225 192]\n [ 64 128   0]]\n---------------\n"
     }
    ],
    "source": [
