--- a/glauRecon.ipynb
+++ b/glauRecon.ipynb
@@ -91,25 +91,10 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "clahe = cv2.createCLAHE(clipLimit =2.0, tileGridSize=(8,8))\n",
-    "cl_img = clahe.apply(r)\n",
-    "#ret, otsu_cl_img = cv2.threshold(cl_img, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)\n",
-    "\n",
-    "slicedList = bitPlaneSlicing(cl_img,8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_pixel(img, line, col): \n",
+    "def get_pixel(img, center, line, col): \n",
     "      \n",
     "    new_value = 0\n",
     "    if(line >= 0 and col >= 0):  \n",
@@ -118,6 +103,8 @@
     "            # value is greater than or equal \n",
     "            # to center pixel values then  \n",
     "            # set it to 1\n",
+    "            #if img[lince][col] > center: \n",
+    "            #    new_value = 1\n",
     "            new_value = img[line][col]\n",
     "            #print(\"Entrei com o vizinho \"+str(img[line][line]))\n",
     "                \n",
@@ -133,38 +120,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function for calculating LBP \n",
     "def lbp_calculated_pixel(img, line, col): \n",
     "    \n",
+    "    center = img[line][col]\n",
     "    val_ar = [] \n",
     "      \n",
     "    # top_left \n",
-    "    val_ar.append(get_pixel(img, line-1, col-1)) \n",
+    "    val_ar.append(get_pixel(img,center , line-1, col-1)) \n",
     "      \n",
     "    # top \n",
-    "    val_ar.append(get_pixel(img, line-1, col)) \n",
+    "    val_ar.append(get_pixel(img,center , line-1, col)) \n",
     "      \n",
     "    # top_right \n",
-    "    val_ar.append(get_pixel(img, line-1, col + 1)) \n",
+    "    val_ar.append(get_pixel(img,center , line-1, col + 1)) \n",
     "      \n",
     "    # right \n",
-    "    val_ar.append(get_pixel(img, line, col + 1)) \n",
+    "    val_ar.append(get_pixel(img,center , line, col + 1)) \n",
     "      \n",
     "    # bottom_right \n",
-    "    val_ar.append(get_pixel(img, line + 1, col + 1)) \n",
+    "    val_ar.append(get_pixel(img,center , line + 1, col + 1)) \n",
     "      \n",
     "    # bottom \n",
-    "    val_ar.append(get_pixel(img, line + 1, col)) \n",
+    "    val_ar.append(get_pixel(img,center , line + 1, col)) \n",
     "      \n",
     "    # bottom_left \n",
-    "    val_ar.append(get_pixel(img, line + 1, col-1)) \n",
+    "    val_ar.append(get_pixel(img,center , line + 1, col-1)) \n",
     "      \n",
     "    # left \n",
-    "    val_ar.append(get_pixel(img, line, col-1)) \n",
+    "    val_ar.append(get_pixel(img,center , line, col-1)) \n",
     "       \n",
     "    # Now, we need to convert binary  \n",
     "    val = 0\n",
@@ -178,23 +166,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def LBP(img):\n",
     "    img_lbp = np.zeros((img.shape[0],img.shape[1]), np.uint8)\n",
-    "    #print(img_lbp.shape) \n",
+    "    print(img_lbp.shape) \n",
     "    for line in range(img.shape[0]):\n",
     "        for col in range(img.shape[1]):\n",
-    "            img_lbp[line, col] = lbp_calculated_pixel(img, line, col)\n",
+    "            img_lbp[line, col] = lbp_calculated_pixel(img, col, line)\n",
     "\n",
     "    return img_lbp    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def localBinaryPattern(imglist):\n",
+    "    lbp_List = []\n",
+    "    for i in range(len(imglist)):\n",
+    "        lbp_List.append(LBP(imglist[i]))\n",
+    "\n",
+    "    return lbp_List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "clahe = cv2.createCLAHE(clipLimit =2.0, tileGridSize=(8,8))\n",
+    "cl_img = clahe.apply(r)\n",
+    "#ret, otsu_cl_img = cv2.threshold(cl_img, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)\n",
+    "\n",
+    "slicedList = bitPlaneSlicing(cl_img,8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -202,11 +219,12 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "(360, 480)\n[[1 1 1]\n [1 0 0]\n [0 0 0]]\n[[ 20  19   1]\n [ 96 225 192]\n [ 64 128   0]]\n---------------\n"
+     "text": "[[7 8 9 9]\n [4 5 6 6]\n [1 2 3 3]]\nwidth - 4\nheight - 3\n2\n(3, 4)\n------- OPA --------\n"
     }
    ],
    "source": [
-    "print(slicedList[4].shape)\n",
+    "######### BIT PLANE SLICING ##########\n",
+    "#print(slicedList[4].shape)\n",
     "#for i in range(360):\n",
     "#    for j in range(480):\n",
     "#        print(slicedList[4][i][j])\n",
@@ -215,17 +233,29 @@
     "#finalr = cv2.hconcat([slicedList[7],slicedList[6],slicedList[5],slicedList[4]])\n",
     "#finalv = cv2.hconcat([slicedList[3],slicedList[2],slicedList[1],slicedList[0]])\n",
     "#final = cv2.vconcat([finalr,finalv])\n",
-    "#cv2.imshow(\"final\",final)\n",
+    "#cv2.imshow(\"final BPS\",final)\n",
     "#cv2.imshow(\"8to5img\",slicedList[7]+slicedList[6]+slicedList[5]+slicedList[4])\n",
     "#cv2.imshow(\"4to1img\",slicedList[3]+slicedList[2]+slicedList[1]+slicedList[0])\n",
     "#cv2.imshow(\"CL_IMG\",cl_img)\n",
     "#cv2.imshow('B-RGB',b)\n",
     "#cv2.imshow('CLIMG',r)\n",
     "\n",
-    "x2 = np.array([[1,1,1],[1,0,0],[0,0,0]],np.int32)\n",
+    "######LOCAL BINARY PATTERN ############\n",
+    "x2 = np.array([[7,8,9,11],[4,5,6,12],[1,2,3,13]],np.int32)\n",
     "print(x2)\n",
-    "print(LBP(x2))\n",
-    "print(\"---------------\")\n",
+    "height, width= x2.shape\n",
+    "print(\"width - \"  +  str(width))\n",
+    "print(\"height - \" + str(height))\n",
+    "print(x2[2][1])\n",
+    "print(x2.shape)\n",
+    "#print(LBP(x2))\n",
+    "print(\"------- OPA --------\")\n",
+    "#img8 = LBP(slicedList[7])\n",
+    "#slicedListLBP = localBinaryPattern(slicedList)\n",
+    "#finalrLBP = cv2.hconcat([slicedListLBP[7],slicedListLBP[6],slicedListLBP[5],slicedListLBP[4]])\n",
+    "#finalvLBP = cv2.hconcat([slicedListLBP[3],slicedListLBP[2],slicedListLBP[1],slicedListLBP[0]])\n",
+    "#finalLBP = cv2.vconcat([finalrLBP,finalvLBP])\n",
+    "#cv2.imshow(\"final LBP\",finalLBP)\n",
     "# waits for user to press any key \n",
     "# (this is necessary to avoid Python kernel form crashing) \n",
     "cv2.waitKey(0)\n",
