--- a/VCDR.ipynb
+++ b/VCDR.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,23 +70,67 @@
     "        #Segments cup region, changing all its pixels to black and calculates cup diameter\n",
     "        #@return Image with cup region segmented\n",
     "        cupImage = GlaucomaIdentifier(np.copy(self.image))\n",
-    "        minDisc = 99999\n",
-    "        maxDisc = -1\n",
+    "        minCup = 99999\n",
+    "        maxCup = -1\n",
     "        height, width, _ = cupImage.image.shape\n",
     "\n",
     "        for j in range(height):\n",
     "            for i in range(width):\n",
-    "                if(cupImage.getYComponent(cupImage.image[j][i]) > 150.0):\n",
-    "                    print(\"yeah\")\n",
+    "                if(cupImage.getYComponent(cupImage.image[j][i]) > 200):\n",
+    "                    #print(\"yeah\")\n",
     "                    cupImage.image[j][i] = (0,0,0)\n",
+    "                    if(j < minCup):\n",
+    "                        minCup = j\n",
+    "                    if(j > maxCup):\n",
+    "                        maxCup = j\n",
     "                    #print(cupImage.image[j][i])\n",
     "        #cv2.imshow(\"cupImage\",cupImage.image)           \n",
-    "        return cupImage.image\n"
+    "        print(\"Max cup = \" + str(maxCup) +\", Min Cup = \"+ str(minCup))\n",
+    "        self.cupDiameter = maxCup - minCup\n",
+    "        return cupImage.image\n",
+    "\n",
+    "    def getDiscImage(self):\n",
+    "        #Segments disc region, changing all its pixels to white and the others to black, and calculates cup diameter\n",
+    "        #@return Image with disc region segmented\n",
+    "        discImage = GlaucomaIdentifier(np.copy(self.image))\n",
+    "        minDisc = 99999\n",
+    "        maxDisc = -1\n",
+    "        height, width, _ = discImage.image.shape\n",
+    "\n",
+    "        for j in range(height):\n",
+    "            for i in range(width):\n",
+    "                if(discImage.image[j][i][2] >= 230):\n",
+    "                    #print(\"yeah\")\n",
+    "                    discImage.image[j][i] = (255,255,255)\n",
+    "                    if(j < minDisc):\n",
+    "                        minDisc = j\n",
+    "                    if(j > maxDisc):\n",
+    "                        maxDisc = j\n",
+    "                    #print(cupImage.image[j][i])\n",
+    "                else:\n",
+    "                    discImage.image[j][i] = (0,0,0)\n",
+    "        #cv2.imshow(\"cupImage\",cupImage.image)           \n",
+    "        print(\"Max Disc = \" + str(maxDisc) +\", Min Disc = \"+ str(minDisc))\n",
+    "        self.cupDiameter = maxDisc - minDisc\n",
+    "        return discImage.image\n",
+    "\n",
+    "    def getCupToDiscImage(self):\n",
+    "        cupDiscImage = np.copy(self.getDiscImage())\n",
+    "        cupImage = np.copy(self.getCupImage())\n",
+    "        height, width,_ = cupDiscImage.shape\n",
+    "\n",
+    "        for j in range(height):\n",
+    "            for i in range(width):\n",
+    "                if(np.any(cupDiscImage[j][i] ==  255)):\n",
+    "                    if(np.any(cupImage[j][i] ==  0)):\n",
+    "                        cupDiscImage[j][i] = (0,0,0)\n",
+    "\n",
+    "        return cupDiscImage\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -94,20 +138,21 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "(2136, 3216, 3)\n(360, 480, 3)\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nyeah\nsampleAntes[1 1 1]\npixelAntes[1 1 1]\n[1 1 1]\n(0, 0, 0)\nsampleDepois[0 0 0]\npixelDepois(0, 0, 0)\n"
+     "text": "(2336, 3504, 3)\n(360, 480, 3)\nMax Disc = 359, Min Disc = 58\nMax cup = -1, Min Cup = 99999\nCup Diameter = -100000\nsampleAntes[0 1 1]\npixelAntes[0 2 0]\n[0 2 0]\n(0, 0, 0)\nsampleDepois[0 0 0]\ndaora\npixelDepois(0, 0, 0)\n"
     }
    ],
    "source": [
-    "sample = cv2.imread(\"glaucoma.jpg\")\n",
+    "sample = cv2.imread(\"01_g.jpg\")\n",
     "resized_img = cv2.resize(sample,(480,360))\n",
     "im = GlaucomaIdentifier(np.copy(resized_img))\n",
     "#print(im.getYComponent(1,1,1))\n",
     "#print(im.getVCDR())\n",
-    "height, width, _ = sample.shape\n",
+    "\n",
     "print(sample.shape)\n",
     "print(im.image.shape)\n",
     "\n",
-    "cupImage = im.getCupImage()\n",
+    "cupImage = im.getCupToDiscImage()\n",
+    "print(\"Cup Diameter = \"+str(im.cupDiameter))\n",
     "pixel = sample[0][0]\n",
     "print(\"sampleAntes\"+str(resized_img[0][0]))\n",
     "print(\"pixelAntes\"+str(pixel))\n",
@@ -116,6 +161,8 @@
     "resized_img[0][0] = (0,0,0)\n",
     "print(pixel)\n",
     "print(\"sampleDepois\"+str(resized_img[0][0]))\n",
+    "if( np.any(resized_img[0][0] == 0) ):\n",
+    "    print(\"daora\")\n",
     "print(\"pixelDepois\"+str(pixel))\n",
     "cv2.imshow(\"original\",resized_img)\n",
     "cv2.imshow(\"cupImage\",cupImage)\n",
